@@ -1,3 +1,8 @@
+2008-01-07  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Frederic Crozat
+	<fcrozat@mandriva.com> to add LZMA archives (Closes: #13256)
+
 === shared-mime-info 0.23 ===
 
 2007-12-18  Bastien Nocera  <hadess@hadess.net>
